2003-08-01  John Luke  <jluke@cfl.rr.com>

	* /en/*.xml: use C#-style names, ex Gdk instead of GDK

2003-07-31  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/TreeIter.xml: documented except Zero, Copy, and Free
	* en/Gtk/TreeViewColumn.xml: documented	
	
2003-07-30  Duncan Mak  <duncan@ximian.com>

	* en/Gdk/EventNoExpose.xml: 
	* en/Gdk/EventButton.xml: Added hyperlinks.

2003-07-30  Duncan Mak  <duncan@ximian.com>	

	* en/Gnome/CanvasWidget.xml: 
	* en/Gnome/CanvasRect.xml: 
	* en/Gnome/CanvasRE.xml: 
	* en/Gnome/CanvasPolygon.xml:
	* en/Gnome/CanvasPixbuf.xml: 
	* en/Gnome/CanvasLine.xml:
	* en/Gnome/CanvasItem.xml:
	* en/Gnome/CanvasGroup.xml:
	* en/Gnome/CanvasEllipse.xml:
	* en/Gnome/CanvasClipgroup.xml:
	* en/Gnome/CanvasBpath.xml:
	* en/Gnome/Canvas.xml: fully documented.
	
2003-07-29  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/Label.xml: Finished documentation for the Gtk.Label
	class.

2003-07-28  Duncan Mak  <duncan@ximian.com>

	* en/Glade/XML.xml: Added some documentation.

2003-07-27  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/CheckButton.xml: add small example, update
	* en/Gtk/Combo.xml: add example, update
	
	* en/Gtk/TreeModelFlags.xml:
	* en/Gtk/RcFlags.xml: more documentation from 
	Jonathan Kessler <Jwkpiano1@comcast.net>.

2003-07-26  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/Orientation.xml: 
	* en/Gtk/MetricType.xml:
	* en/Gtk/ObjectFlags.xml: more documentation from 
	Jonathan Kessler <Jwkpiano1@comcast.net>.

2003-07-25  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/DestDefaults.xml: more documentation from 
	Jonathan Kessler <Jwkpiano1@comcast.net>.

	* en/Gtk/TreeViewColumnSizing.xml: added documentation from
	Jonathan Kessler <Jwkpiano1@comcast.net>.

2003-07-24  John Luke  <jluke@cfl.rr.com>

	* en/Rsvg.xml: add summary page
	* en/GConf.xml: add summary page

2003-07-22  John Luke  <jluke@cfl.rr.com>

	* en/Rsvg: add directory
	* en/Rsvg/*.xml: add initial docs
	* en/Rsvg/Tool.xml: add example
	* en/Gtk/Menu.xml: add example
