@@ -1,3 +1,7 @@
+2003-08-01  Martin Willemoes Hansen <mwh@sysrq.dk>
+
+	* /en/Gtk/MessageDialog.xml: Fixed remark.
+
 2003-08-01  John Luke  <jluke@cfl.rr.com>
 
 	* /en/*.xml: use C#-style names, ex Gdk instead of GDK
